# lab8-soft

./: .gitignore  Proveedores.md  README.md  pyproject.toml  sonar-project.properties
.atl/: .skill-registry.cache.json  skill-registry.md
docs/: architecture.md
openspec/: config.yaml
openspec/changes/implementacion-python-rewards/: design.md  proposal.md  tasks.md
openspec/changes/implementacion-python-rewards/specs/python-quality-tooling/: spec.md
openspec/changes/implementacion-python-rewards/specs/restaurant-rewards-api/: spec.md
openspec/changes/implementacion-python-rewards/specs/reward-event-processing/: spec.md
src/rewards/: __init__.py
src/rewards/application/: ports.py  use_cases.py
src/rewards/config/: settings.py
src/rewards/domain/: __init__.py  models.py  reward_rules.py
src/rewards/infrastructure/db/: models.py  repositories.py
src/rewards/infrastructure/messaging/: __init__.py  contracts.py  rabbitmq.py
src/rewards/interfaces/api/: __init__.py  main.py
src/rewards/interfaces/worker/: main.py
tests/api/: test_reward_actions.py
tests/application/: test_process_reward_event.py
tests/config/: test_settings.py
tests/domain/: test_idempotency.py  test_reward_rules.py
tests/infrastructure/db/: __init__.py  test_repositories.py
tests/infrastructure/messaging/: __init__.py  test_contracts.py  test_rabbitmq.py
tests/interfaces/: test_worker.py
